@@ -18,16 +18,10 @@
 #include <svp/sep.h>
 #include <svp/perf.h>
 
-struct benchmark_interval {
-  counter_t before[MTPERF_NCOUNTERS];
-  counter_t after[MTPERF_NCOUNTERS];
-};
-
-#define MAX_LAPSES_PER_WORK 100
-
 struct work_lapses {
   size_t current_interval;
-  struct benchmark_interval intervals[MAX_LAPSES_PER_WORK];
+  size_t current_iter;
+  struct s_interval *intervals;
 };
 
 struct benchmark_state {
@@ -37,8 +31,6 @@ struct benchmark_state {
 #endif
   struct work_lapses * wl;
 };
-
-static const struct benchmark_interval ct_zero = { { 0 }, { 0 } };
 
 struct benchmark {
   const char *title;
@@ -53,12 +45,13 @@ struct benchmark {
 
 sl_decl(run_benchmark, void, sl_glparm(struct benchmark*, b));
 
-#define start_interval(wl) mtperf_sample(wl->intervals[wl->current_interval].before)
-#define finish_interval(wl) mtperf_sample(wl->intervals[wl->current_interval++].after)
+#define start_interval(wl, Tag) \
+  mtperf_start_interval(wl->intervals, wl->current_interval, wl->current_iter, (Tag))
+#define finish_interval(wl) \
+  mtperf_finish_interval(wl->intervals, wl->current_interval++)
 
-#define start_finish_empty_interval(wl) do {	\
-    wl->intervals[wl->current_interval++] = ct_zero;	\
-  } while(0)
+#define start_finish_empty_interval(wl, Tag) \
+  mtperf_empty_interval(wl->intervals, wl->current_interval++, wl->current_iter, (Tag))
 
 
 #endif // ! SLC_LIB_BENCHMARK_H
